<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#343434">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textoLongitud"
        android:id="@+id/textoLongitud"
        android:textColor="#adadad"
        android:layout_marginBottom="39dp"
        android:layout_alignStart="@+id/botonGenerar"
        android:layout_alignBottom="@+id/barraLongitud" />

    <SeekBar
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/barraLongitud"
        android:max="32"
        android:progress="8"
        android:background="#343434"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="162dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botonGenerar"
        android:id="@+id/botonGenerar"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="37dp"
        android:layout_marginBottom="36dp"
        android:background="#adadad" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botonGuardar"
        android:id="@+id/botonGuardar"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="32dp"
        android:layout_alignParentStart="false"
        android:layout_alignBottom="@+id/botonGenerar"
        android:layout_above="@+id/botonGenerar"
        android:background="#adadad" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/pantallaLongitudDefault"
        android:id="@+id/pantallaLongitud"
        android:textColor="#adadad"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignParentTop="true"
        android:layout_marginTop="130dp"
        android:layout_alignBaseline="@+id/textoLongitud"
        android:layout_alignParentEnd="false"
        android:layout_alignEnd="@+id/botonGuardar"
        android:textSize="24dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pantallaClave"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="94dp"
        android:layout_below="@+id/barraLongitud"
        android:text="@string/pantallaClaveDefault"
        android:textColor="#adadad"
        android:textAlignment="center" />
</RelativeLayout>